Fix dark mode for date picker
Summary:
Replace the hardcoded background color of `.fancy-datepicker-core` with the same background color that `.phui-box-border` uses: `{$page.content}`.

Refs T15056

Test Plan:
1. Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
2. Run `./bin/config set phabricator.show-prototypes true`
3. Install Calendar at http://phorge.localhost/applications/view/PhabricatorCalendarApplication/
4. Go to http://phorge.localhost/calendar/
5. Select "Create Event" in upper right corner
6. Click the small date picker button for Start or End fields

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26188

--- a/webroot/rsrc/css/phui/phui-form-view.css
+++ b/webroot/rsrc/css/phui/phui-form-view.css
@@ -399,7 +399,7 @@ body .phui-form-view .remarkup-assist-textarea.aphront-textarea-drag-and-drop {
 }
 
 .fancy-datepicker-core {
-  background-color: white;
+  background-color: {$page.content};
   border: 1px solid {$lightgreyborder};
   box-shadow: {$dropshadow};
   border-radius: 3px;
